examples/authz-ingress.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iam-token
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "ingress-open-cluster-management"
spec:
  rules:
  - http:
      paths:
      - path: /iam-token/
        backend:
          serviceName: iam-token-service
          servicePort: 10443
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iam-pap
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "ingress-open-cluster-management"
spec:
  rules:
  - http:
      paths:
      - path: /iam-pap/
        backend:
          serviceName: iam-pap
          servicePort: 39001

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iam-pdp
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "ingress-open-cluster-management"
spec:
  rules:
  - http:
      paths:
      - path: /iam-pdp/
        backend:
          serviceName: iam-pdp
          servicePort: 7998
