examples/catalog-ui-ingress.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalog-ui
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "ingress-open-cluster-management"
    ingress.open-cluster-management.io/auth-type: "id-token"
spec:
  rules:
    - http:
        paths:
          - path: /catalog/
            backend:
              serviceName: catalog-ui
              servicePort: 4000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helm-api
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "ingress-open-cluster-management"
    ingress.open-cluster-management.io/rewrite-target: "/"
spec:
  rules:
    - http:
        paths:
          - path: /helm-api/
            backend:
              serviceName: helm-api
              servicePort: 3000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helm-repo
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "ingress-open-cluster-management"
    ingress.open-cluster-management.io/rewrite-target: "/"
spec:
  rules:
    - http:
        paths:
          - path: /helm-repo/
            backend:
              serviceName: helmrepo
              servicePort: 3001
