examples/elastic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elastic
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "ingress-open-cluster-management"
    ingress.open-cluster-management.io/auth-type: "id-token"
    ingress.open-cluster-management.io/configuration-snippet: |
      if ($request_uri ~* "/_([0-9A-Za-z]*)\?_timestamp=[0-9]*(.*)") {
                proxy_pass http://$proxy_upstream_name/_$1?$2;
            }
spec:
  rules:
  - http:
      paths:
      - path: /_cat
        backend:
          serviceName: elasticsearch
          servicePort: 9200
      - path: /elasticsearch*
        backend:
          serviceName: elasticsearch
          servicePort: 9200
      - path: /logstash*
        backend:
          serviceName: elasticsearch
          servicePort: 9200
      - path: /heapster*
        backend:
          serviceName: elasticsearch
          servicePort: 9200
