examples/image-manager-ingress.yaml
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: image-manager-auth
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "ingress-open-cluster-management"
spec:
  rules:
    - http:
        paths:
          - path: /image-manager/api/v1/auth/
            backend:
              serviceName: image-manager
              servicePort: 8600

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: image-manager
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "ingress-open-cluster-management"
    ingress.open-cluster-management.io/auth-type: "id-token"
spec:
  rules:
    - http:
        paths:
          - path: /image-manager/api/v1
            backend:
              serviceName: image-manager
              servicePort: 8600
