examples/unified-router-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: unified-router
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "ingress-open-cluster-management"
    ingress.open-cluster-management.io/auth-type: "id-token"
    ingress.open-cluster-management.io/rewrite-target: "/"
spec:
  rules:
  - http:
      paths:
      - path: /unified-router/
        backend:
          serviceName: unified-router
          servicePort: 9090
